Fixed biography page
1. Fixed biography page so that text elarges, but doesn't bump pictures
out of place

--- a/styles/styles2.css
+++ b/styles/styles2.css
@@ -990,7 +990,7 @@ a:hover {
     padding: 5px;
 }
 
-.series-pic-about-top {
+/*.series-pic-about-top {
     text-align: left;
     float: left;
     padding-left: 40px;
@@ -1012,7 +1012,7 @@ a:hover {
     border: double #000;
     padding: 5px;   
 }
-
+*/
 .series-pic-books img {
     border: double #000;
     padding: 5px;   
